Package: QDNQseq
----------------

Version: 1.21.2-9000 [2019-09-03]

IMPROVEMENTS:

 * MEMORY: Utilize more memory-efficient matrixStats functions colSums2(),
   colMeans2(), etc.


Version: 1.21.2 [2019-09-03]

SIGNIFICANT CHANGES:

 * Package now imports the 'future' and 'future.apply' packages; previously
   the 'future' was listed as a suggested package.

 * Package no longer depends on BiocParallel.

 * binReadCounts() now uses the future framework instead of BiocParallel for
   parallelization.

IMPROVEMENTS:

 * MEMORY: Avoiding data type coercions in more places by for instance making
   sure that vectors and matrices are initated with the values of the correct
   data type (instead of the default NA, which is a logical value).

SOFTWARE QUALITY:

 * Using future_lapply() and future_apply() of the well-tested future.apply
   package instead of internal analogue implementations.

 * TESTS: Now testing numerical reproducibility also for parallel processing
   (using future strategies 'multisession' and 'multicore').

 * TESTS: Now asserting numerical reproducibility of also segmentBins() and
   callBins().
 

Version: 1.21.1 [2019-08-30]

SIGNIFICANT CHANGES:

 * exportVCF() is no longer exported. Use exportBins(..., format="vcf")
   instead.
 

Version: 1.20.0 [2019-05-02]

RELEASE:

 * Bioconductor 3.9


Version: 1.18.0 [2018-10-30]

RELEASE:

 * Bioconductor 3.8


Version: 1.16.0 [2018-04-30]

RELEASE:

 * Bioconductor 3.7


Version: 1.14.0 [2017-10-30]

RELEASE:

 * Bioconductor 3.6


Version: 1.12.0 [2017-04-23]

RELEASE:

 * Bioconductor 3.5

IMPROVEMENTS:

 * VCF and SEG file export have been implemented to allow use of 
   downstream analysis tools such as Cartegenia (NGS) Bench.

 * binReadCounts() now supports parallel computing

 * calculateBlackListByRegions() has been implemented for convient 
   bin overlap calculation of any set of regions.
      

Version: 1.10.0 [2016-10-18]

RELEASE:
   
 * Bioconductor 3.4


Version: 1.8.0 [2016-05-04]
