@@ -27,7 +27,7 @@ importFrom(methods, callNextMethod, new)
 importFrom(R.utils, downloadFile)
 importFrom(Rsamtools, scanBamFlag)
 importFrom(stats, aggregate, approxfun, density, formula, lm, loess, median, predict, qnorm)
-importFrom(utils, data, maintainer, packageVersion, read.table, write.table)
+importFrom(utils, capture.output, data, maintainer, packageVersion, read.table, write.table)
 importFrom(GenomicRanges, GRanges)
 importFrom(IRanges, IRanges)
 importFrom(future.apply, future_apply, future_lapply)
