@@ -29,6 +29,7 @@
 #         amplifications. And if a second negative value is provided, it is used
 #         as the cutoff for homozygous deletions.}
 #     \item{...}{Additional arguments passed to @see "CGHcall::CGHcall".}
+#%     \item{verbose}{If @TRUE, verbose messages are produced.}
 # }
 #
 # \details{
@@ -79,7 +80,8 @@ setMethod('callBins', signature=c(object='QDNAseqCopyNumbers'),
     method=c("CGHcall", "cutoff"),
     cutoffs=log2(c(deletion=0.5, loss=1.5, gain=2.5, amplification=10) / 2),
     ...) {
-
+    verbose <-getOption("QDNAseq::verbose", TRUE)
+    
     method <- match.arg(method)
     if (method == "CGHcall") {
         ## Mark van de Wiel confirms that CGHcall::CGHcall() assumes (=requires)
@@ -105,14 +107,20 @@ setMethod('callBins', signature=c(object='QDNAseqCopyNumbers'),
             ## NOTE: CGHcall::CGHcall() produces warnings on "Recycling array
             ##       of length 1 in vector-array arithmetic is deprecated.
             ##       Use c() or as.vector() instead."
-            listcall <- CGHcall(seg, organism=organism, ...)
+            ## NOTE: CGHcall::CGHcall() produces message():s and stdout output.
+	    suppressVerbose({
+                listcall <- CGHcall(seg, organism=organism, ...)
+	    }, suppress = !verbose)
         }, error=function(e) {
             stop("Command CGHcall() returned the following error message:\n",
                 e, "Please contact maintainer of package CGHcall: ",
                 maintainer("CGHcall"), call.=FALSE)
         })
         tryCatch({
-            cgh <- ExpandCGHcall(listcall, seg)
+            ## NOTE: CGHcall::ExpandCGHcall() produces message():s.
+	    suppressVerbose({
+                cgh <- ExpandCGHcall(listcall, seg)
+	    }, suppress = !verbose)
         }, error=function(e) {
             stop("Command ExpandCGHcall() returned the following error ",
                 "message:\n", e,
